<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pikachu_cry"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_to_win"
        android:fontFamily="monospace"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/welcomeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameTxt"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="monospace"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/nameTxt"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pikaTxt"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pika"
        android:fontFamily="monospace"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/pikaTxt"
        app:layout_constraintTop_toBottomOf="@id/nameTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backMenuBtn_fail"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="240sp"
        android:layout_height="80sp"
        android:id="@+id/backMenuBtn_fail"
        app:layout_constraintTop_toBottomOf="@+id/pikaTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="32sp"
        android:text="@string/back_to_menu"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_style"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
