<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pikachu_welcome"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="monospace"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/detailText"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameTxt"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:id="@+id/nameTxt"
        app:layout_constraintTop_toBottomOf="@+id/detailText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ageTxt"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:paddingHorizontal="16sp"
        android:textSize="32sp"
        android:hint="@string/your_name"
        app:hintTextColor="#646464"
        app:hintEnabled="true"
        android:background="@drawable/btn_style"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:id="@+id/ageTxt"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordTxt"
        android:layout_marginTop="16sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:paddingHorizontal="16sp"
        android:textSize="32sp"
        android:hint="@string/your_age"
        app:hintTextColor="#646464"
        app:hintEnabled="true"
        android:background="@drawable/btn_style"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:id="@+id/passwordTxt"
        app:layout_constraintTop_toBottomOf="@+id/ageTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signupBtn"
        android:layout_marginTop="16sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:paddingHorizontal="16sp"
        android:textSize="32sp"
        android:hint="@string/your_password"
        app:hintTextColor="#646464"
        app:hintEnabled="true"
        android:background="@drawable/btn_style"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:id="@+id/signupBtn"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/ok"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@drawable/btn_style"
        android:layout_marginBottom="100sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
