<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pikachu_general">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="monospace"
        android:textSize="70sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/nameTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pikaTxt"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pika"
        android:fontFamily="monospace"
        android:textSize="70sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/pikaTxt"
        app:layout_constraintTop_toBottomOf="@id/nameTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/list"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:id="@+id/list"
        android:background="@drawable/btn_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pikaTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listTxt"
            android:textAlignment="center"
            android:text="@string/choose_your_task"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks"
            android:layout_width="match_parent"
            android:layout_height="430sp"
            android:layout_marginTop="16sp"
            tools:listitem="@layout/items_task" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>